--- a/trunk/reniec/.settings/org.eclipse.wst.common.component
+++ b/trunk/reniec/.settings/org.eclipse.wst.common.component
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="reniec">
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <property name="java-output-path" value="/RENIEC/target/classes"/>
-        <property name="context-root" value="reniec"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <property name="context-root" value="RENIEC"/>
+        <property name="java-output-path" value="/reniec/target/classes"/>
     </wb-module>
 </project-modules>
