--- a/trunk/votacion_onpe/.settings/org.eclipse.wst.common.component
+++ b/trunk/votacion_onpe/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-        <property name="context-root" value="onpe"/>
         <property name="java-output-path" value="/votacion/target/classes"/>
+        <property name="context-root" value="votacion"/>
     </wb-module>
 </project-modules>
