--- a/bn/.settings/org.eclipse.wst.common.component
+++ b/bn/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-        <property name="context-root" value="rs-server"/>
         <property name="java-output-path" value="/bn/target/classes"/>
+        <property name="context-root" value="bn"/>
     </wb-module>
 </project-modules>
